@@ -3,7 +3,7 @@ package br.com.taguinho.api.service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -21,36 +21,39 @@ public class TutorService {
   @Autowired
   private TutorRepository tutorRepository;
 
-  public Tutor createTutor(Tutor Tutor) {
-    return tutorRepository.save(Tutor);
+  public TutorDTO createTutor(Tutor tutor) {
+    tutor.setCreatedAt(Objects.requireNonNullElse(tutor.getCreatedAt(), LocalDateTime.now()));
+    tutor.setActive(true);
+
+    Tutor savedTutor = tutorRepository.save(tutor);
+    return TutorDTO.mapToDTO(savedTutor);
   }
 
   public List<TutorDTO> getAllActiveTutors() {
     List<Tutor> tutorsActive = tutorRepository.findByActiveTrue();
 
     return tutorsActive.stream()
-        .map(res -> new TutorDTO(res.getId(), res.getFullname(), res.getEmail(), res.getPhone(), res.getRole(), res.getActive()))
-        .collect(Collectors.toList());
+        .map(TutorDTO::mapToDTO)
+        .toList();
   }
 
   public TutorDTO getTutorById(Long id) {
     Tutor tutor = tutorRepository.findById(id)
         .orElseThrow(() -> new EntityNotFoundException());
 
-    return new TutorDTO(tutor.getId(), tutor.getFullname(), tutor.getEmail(), tutor.getPhone(), tutor.getRole(), tutor.getActive());
+    return TutorDTO.mapToDTO(tutor);
   }
 
   public void updateTutor(Long id, Map<String, Object> updates) {
-    Tutor tutorToUpdate = tutorRepository.findById(id)
+    Tutor tutor = tutorRepository.findById(id)
         .orElseThrow(() -> new EntityNotFoundException());
 
-    updates.forEach((key, value) -> {
-      switch (key) {
-        case "fullname" -> tutorToUpdate.setFullname((String) value);
-        case "phone" -> tutorToUpdate.setPhone((String) value);
-      }
-    });
+    if (updates.get("fullname") != null)
+      tutor.setFullname((String) updates.get("fullname"));
 
-    tutorToUpdate.setUpdatedAt(LocalDateTime.now());
+    if (updates.get("phone") != null)
+      tutor.setPhone((String) updates.get("phone"));
+
+    tutor.setUpdatedAt(LocalDateTime.now());
   }
 }
